--- a/احمد_حسين_عنايت_محسن.mw
+++ b/احمد_حسين_عنايت_محسن.mw
@@ -59,82 +59,129 @@
 	  
 در مې بل د حــــاجت نيشته، اميدونه مې تصويب کړه
 
-== '''[[اختره]]''' ==
-
+اختره
 
 ستا دې قسم وي چې راځې نو خوشحالي راوړه
-   دې خوار ولس ته خپله برخه سوکالي راوړه
 
-  خوته به څنګه دلته راشې 
-  چى زخمى زړونو ته دواشې
-                      دلته خو غم دى
-   دلته ماتم دى
-                      دلته ژړاده واوېلا ده
-    په هر ىو کور ګډه غوغا ده
+دې خوار ولس ته خپله برخه سوکالي راوړه
 
-    اوته اختر يي
-                     ډىر بختور يي
-    ته د خوښىو سمبول
-                      د شتمنيو سمبول
-    تا سره رنګ دې د نکرىزو رنګ
-                     تا سره شړنګ دې د بنګړىو شړنګ
-   خو دلته رنګ شته د نکرىزو نه دى
-                    داد سرو وىنو او زخمونو رنګ دى
-   د کونډو، بورو، ورارو  په لاسونو رنګ دى
-   دا شړنګ چى اورې د بنګړىو نه دى
-       د خوشحالىو نه دى
-     داد وسلو او وساىطو شړنګ دى
-      ته خبر نه يې ، دلته جنګ دى ،دلته جنګ دى
+خوته به څنګه دلته راشې
+ 
+چى زخمى زړونو ته دواشې
 
-        تاته زه کومه دښته وژاړمه
-                  درته ليلي که بکوا وژاړمه
-        دلته خو هرځاى کر بلا ده
-                 نو هره ورځ مو عاشورا ده
-    خوښه دى خپله هدىره او قبرستان ګورې
-                که علم او پوهى ته جوړشوى لوى زندان ګورې
-    افغانستان ګورې
-                 که ته امىر ګورى، ىا قوماندان ګورې
-   لاس ئى ککړ په وىنو، وىنو
-                چى هر افغان ګورې
-     زوى د افغان ګورى  ،ىا مسلمان ګورې
+دلته خو غم دى
 
-               نو اى اختره :
-        د خوشحالۍ مظهره
-               د ورورولۍ  مظهره
-  ته مظهر خو د وحدت ېي 
-               د پىغمبر د ستر سنت ېي
- که زما منى، نو دلته مه راځه ته
-               مونږ ستا راتګ ته تىارۍ نه لرو
-     مونږ حوصله د خوشحالۍ نه لرو
+دلته ماتم دى
 
- که ستا هر څو اثر رسوخ دى 
-                  زمونږ ىتىم په ژړا پوخ دى
-       مونږه ژړا ته پرىږده
-                    مونږ واوىلا ته پرىږده
-   مونږه تخرىب ته پرىږده
-                      مونږ خپل نصىب ته پرىږده
-      نوره دى خوښه چې راځې او که نه
-                      د خوار ( محسن ) خوښه منې او که نه  
+دلته ژړاده واوېلا ده
+
+په هر ىو کور ګډه غوغا ده
+
+اوته اختر يي
+
+ډىر بختور يي
+
+ته د خوښىو سمبول
+
+د شتمنيو سمبول
+
+تا سره رنګ دې د نکرىزو رنګ
+
+تا سره شړنګ دې د بنګړىو شړنګ
+
+خو دلته رنګ شته د نکرىزو نه دى
+
+داد سرو وىنو او زخمونو رنګ دى
+
+د کونډو، بورو، ورارو  په لاسونو رنګ دى
+
+دا شړنګ چى اورې د بنګړىو نه دى
+
+د خوشحالىو نه دى
+
+داد وسلو او وساىطو شړنګ دى
+
+ته خبر نه يې ، دلته جنګ دى ،دلته جنګ دى
+
+
+تاته زه کومه دښته وژاړمه
+
+درته ليلي که بکوا وژاړمه
+
+دلته خو هرځاى کر بلا ده
+
+نو هره ورځ مو عاشورا ده
+
+خوښه دى خپله هدىره او قبرستان ګورې
+
+که علم او پوهى ته جوړشوى لوى زندان ګورې
+
+افغانستان ګورې
+
+که ته امىر ګورى، ىا قوماندان ګورې
+
+لاس ئى ککړ په وىنو، وىنو
+
+چى هر افغان ګورې
+
+زوى د افغان ګورى  ،ىا مسلمان ګورې
+
+
+نو اى اختره :
+
+د خوشحالۍ مظهره
+
+د ورورولۍ  مظهره
+
+ته مظهر خو د وحدت ېي 
+
+د پىغمبر د ستر سنت ېي
+
+که زما منى، نو دلته مه راځه ته
+
+مونږ ستا راتګ ته تىارۍ نه لرو
+
+مونږ حوصله د خوشحالۍ نه لرو
+
+که ستا هر څو اثر رسوخ دى 
+
+زمونږ ىتىم په ژړا پوخ دى
+
+مونږه ژړا ته پرىږده
+
+مونږ واوىلا ته پرىږده
+
+مونږه تخرىب ته پرىږده
+
+مونږ خپل نصىب ته پرىږده
+
+نوره دى خوښه چې راځې او که نه
+
+د خوار ( محسن ) خوښه منې او که نه  
   
- نو اى اختره 
+نو اى اختره 
 
-    ډىر بختوره
+ډىر بختوره
          
-  زمونږ په بد حال نا خبره
+زمونږ په بد حال نا خبره
  
 چې ته راځى خالي لاس مه راځه ته
  
-         لکه پخوا بې احساس مه راځه ته
+لکه پخوا بې احساس مه راځه ته
  
- چې ته راځې نو اخوت راوړه
+چې ته راځې نو اخوت راوړه
               
- ځان سره سوله راوړه
+ځان سره سوله راوړه
    
 ملي وحدت راوړه
-             ښه قىادت راوړه
- سىاست راوړه
-               مىنه راوړه 
-   برکت راوړه
+
+ښه قىادت راوړه
+
+سىاست راوړه
+
+مىنه راوړه 
+
+برکت راوړه
  
 او........................او............او
     
