--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -274,8 +274,8 @@ Fundamental to the structure of the universe is the existence of [[dark matter]]
 {{کاسموکيميا}}
 د ستورپوهنې او ستورپېژندنې پرمختګ يوه بله اهمه مېنځپوهنيزه ډله رامېنځ ته کړې چې د ساينس د نورو ډګرونو سره تړاو پېدا کوي. دا څانګې دا دي:
 * [[ستورژونپوهنه]]: په کايناتو کې د ژونپوهنيزو غونډالونو د پېښو او تجريدي بشپړتابه زده کړه.
-* [[ارکيوستورپوهنه]]: the study of ancient or traditional astronomies in their cultural context, utilizing [[archaeology|archaeological]] and [[anthropology|anthropological]] evidence.
-* [[ستورکيميا]]: the study of the [[chemical]]s found in outer space, usually in [[Molecular cloud|molecular gas cloud]]s, and their formation, interaction and destruction. As such, it represents an overlap of the disciplines of astronomy and [[chemistry]].
+* [[ارکيوستورپوهنه]]: په فرهنګي ډګر کې د لرغونې دوديزې ستورپوهنې زده کړه ده چې د لرغونپوهنې او وګړپوهنې د ثبوتونو په شننه کې رامېنځ ته شوې.
+* [[ستورکيميا]]: په تشيال کې د موندل شويو کيميايي توکو په اړه زده کړه ده چې اکثراً د ماليکيولي ګازونو، د هغوی د جوړېدو، د هغوی د تعاملونو او له منځه تللو په اړه بحثونه کوي. دا چې له نوم نه يې هم څرګندېږي دا زده کړه د ستورپوهنې او کيميا تر مېنځ رامېنځته شوی ډګر دی.
 
 == ناڅانګواله ستورپوهنه ==
 {{main|ناڅانګواله ستورپوهنه}}
