--- a/انټرنېټ.mw
+++ b/انټرنېټ.mw
@@ -342,6 +342,7 @@ This e-primer provides a comprehensive review of the digital and information and
 [[gan:互聯網]]
 [[gd:Eadar-lìon]]
 [[gl:Internet]]
+[[ha:Yanar gizo]]
 [[he:אינטרנט]]
 [[hi:अंतरजाल]]
 [[hr:Internet]]
