robot  Adding: [[pt:Abdul-Qadir Gilani]]

--- a/عبدالقادر_گيلاني.mw
+++ b/عبدالقادر_گيلاني.mw
@@ -105,6 +105,7 @@
 [[fr:Abd al Qadir al-Jilani]]
 [[id:Syekh Abdul Qadir Jaelani]]
 [[ku:Evdilqadirê Geylanî]]
+[[pt:Abdul-Qadir Gilani]]
 [[te:అబ్దుల్ ఖాదిర్ జీలాని]]
 [[tr:Abdülkadir Geylani]]
 [[uk:Абдул Кадір Ґілані]]
