--- a/امينو_اسيد.mw
+++ b/امينو_اسيد.mw
@@ -387,6 +387,7 @@ Several common [[mnemonic]]s have evolved for remembering the ten amino acids of
 [[hu:Aminosav]]
 [[id:Asam amino]]
 [[io:Amin-acido]]
+[[is:Amínósýra]]
 [[it:Amminoacidi]]
 [[ja:アミノ酸]]
 [[ka:ამინომჟავა]]
