--- a/احمد_حسين_عنايت_محسن.mw
+++ b/احمد_حسين_عنايت_محسن.mw
@@ -187,4 +187,12 @@
     
 ستا دې قسم وي چې راځې نو خوشحالي راوړه
      
- دې خوار ولس ته خپله برخه سوکالي  راوړه
+دې خوار ولس ته خپله برخه سوکالي  راوړه
+
+
+
+
+
+
+[[وېشنيزه:پښتانه شاعران]]
+[[وېشنيزه:پښتانه]]
