--- a/زړه.mw
+++ b/زړه.mw
@@ -19,7 +19,7 @@ Embryonic Heart Rate = د نطفې د زړه د پمپولو کچه
 ==جوړښت==  	 
 
 
-په انسانانو کې زړه د ټټر په منځنۍ برخه کې کيڼ لور وخوا ته او د سينې د هډوکي لاندې پروت دی ([http://www.easyrashi.com/TEFILLIN/Position_of_heart.htm انځورونه] وګورۍ). په ټولګړي توګه زړه کيڼ لور ته پروت دی او ساينسپوهان په دې باور دي چې ددې سبب د زړه کيڼ بطن دی. د زړه کيڼ بطن د ښي بطن په پرتله ډېر غښتلی او ځواکمن دی دا ځکه چې د زړه کيڼ بطن، ټول بدن ته د وينې رسولو دنده ترسره کوي. د سږو اناتومي ته که وګورو نو دا به ښکاره شي چې کيڼ سږی د ښي [[سږي]] په پرتله وړوکی دی او ددې سبب هم دا دی چې زړه د نيم-ټټر کيڼه برخه نيسي. زړه په يو ډول کڅوړه کې پوښل شوی چې د پيريکارډيم په نامه سره يادېږي او په همدې توګه د همدغې کڅوړې نه دباندې بيا دواړه سږي د زړه نه راچارپېر دي. پيريکارډيم يوه غبرګه پرده ده چې په ځان کې يو ډول مايع لري. دغه مايع چې د serous fluid په نامه سره يادېږي، د زړه د راغونجېدو په مهال اصطېکاک کې کمی راولي. The [[mediastinum]], a subdivision of the thoracic cavity, is the name of the heart cavity. 
+په انسانانو کې زړه د ټټر په منځنۍ برخه کې کيڼ لور وخوا ته او د سينې د هډوکي لاندې پروت دی ([http://www.easyrashi.com/TEFILLIN/Position_of_heart.htm انځورونه] وګورۍ). په ټولګړي توګه زړه کيڼ لور ته پروت دی او ساينسپوهان په دې باور دي چې ددې سبب د زړه کيڼ بطن دی. د زړه کيڼ بطن د ښي بطن په پرتله ډېر غښتلی او ځواکمن دی دا ځکه چې د زړه کيڼ بطن، ټول بدن ته د وينې رسولو دنده ترسره کوي. د سږو اناتومي ته که وګورو نو دا به ښکاره شي چې کيڼ سږی د ښي [[سږي]] په پرتله وړوکی دی او ددې سبب هم دا دی چې زړه د نيم-ټټر کيڼه برخه نيسي. زړه په يو ډول کڅوړه کې پوښل شوی چې د پيريکارډيم په نامه سره يادېږي او په همدې توګه د همدغې کڅوړې نه دباندې بيا دواړه سږي د زړه نه راچارپېر دي. پيريکارډيم يوه غبرګه پرده ده چې په ځان کې يو ډول مايع لري. دغه مايع چې د serous fluid په نامه سره يادېږي، د زړه د راغونجېدو په مهال اصطېکاک کې کمی راولي. ګوګل چې په انګريزي ژبه بلل کېږي، په ټټر کې يو تشځای دی، او په همدغه تشځای کې زړه ځای پرځای شوی.
 
 The ''apex'' is the blunt point situated in an inferior (pointing down and left) direction. A stethoscope can be placed directly over the apex so that the beats can be counted. It is located posterior to the 5th intercostal space in the left mid-clavicular line. In normal adults, the mass of the heart is 250-350 [[gram|g]] (9-12 oz), or about three fourths the size of a clenched fist, but extremely diseased hearts can be up to 1000 g (2 lb) in mass due to [[Organ hypertrophy|hypertrophy]]. It consists of four chambers, the two upper ''atria'' (singular: atrium
 ) and the two lower ''ventricles''.  On the left is a picture of a fresh human heart which was removed from a 64-year-old British male.
