/* د خواړو په توګه کارونه */

--- a/زړه.mw
+++ b/زړه.mw
@@ -42,7 +42,7 @@ If a person is encountered in cardiac arrest (no heartbeat), [[cardiopulmonary r
 
 Electrical innervation of the heart in health is supplied by two closely intertwined mechanisms. The first mechanism is well demonstrated in electrical coil systole (interpreted by the electrocardiogram as QRS)as an individualized myocardial electrical tree initiated by the sinoatrial node. Secondary diastolic electrical control is posited to represent autonomic recoil control from the vagus nerve and cardiac branches and the thoracic ganglia.
 
-==د خواړو په توګه کارونه==
+==د خواړو په توګه کارول==
 په ډېرو هېوادونو کې د بېلابېلو ژويو لکه د [[چرګ]]، [[پسه]]، [[غوا]]، غوايي، او نورو زړونه د خواړو په توګه کارېږي. که څه هم چې دا د حلال شويو ژويو منځني غړي لکه سږي، کولمې او زړه اکثراً ناخوړنده غړي ګڼل کېږي، خو دا چې زړه د عضلاتو نه جوړ دی، که چېرته څوک زړه پوخ کړي نو د زړه خوند هم د نورمالې غوښې خوند ته ورته دی. په بله وينا د پوخ شوي زړه خوند د هوسۍ د غوښې خوند ته ورته دی.
 
 ==زړه د سمبول په توګه==
