--- a/زړه.mw
+++ b/زړه.mw
@@ -35,8 +35,8 @@ The blood flows through a system, starting in the right atrium, the blood flows 
 The heart is effectively a [[syncytium]], a meshwork of cardiac muscle cells interconnected by contiguous cytoplasmic bridges. This relates to electrical stimulation of one cell spreading to neighboring cells.
 
 ==لومړۍ مرسته==
-[[Image:heart.jpg|thumb|right|Heart]]
-''See [[cardiac arrest]] for emergencies involving the heart''
+[[انځور:heart.jpg|thumb|کيڼ|زړه]]
+''د لا نورو مالوماتو لپاره [[د زړه درېدل]] ولولۍ''
 
 که چېرته د يو چا زړه درېږي، (no heartbeat)، نو په دغه وخت کې [[د زړه احيا]] کولو کړنه بايد سمدلاسه پيل شي او بيا دې د مسلکي طبي املې سره اړيکې ونيولای شي.  If an [[automated external defibrillator]] is available, this device may automatically administer [[defibrillation]] if this is indicated. Usually, if there is enough time, the person can be rushed to the hospital where he or she will be cared for by a cardiologist, a doctor who specializes in the heart and lungs.
 
