--- a/زړه.mw
+++ b/زړه.mw
@@ -38,7 +38,7 @@ The heart is effectively a [[syncytium]], a meshwork of cardiac muscle cells int
 [[انځور:heart.jpg|thumb|کيڼ|زړه]]
 ''د لا نورو مالوماتو لپاره [[د زړه درېدل]] ولولۍ''
 
-که چېرته د يو چا زړه درېږي، (no heartbeat)، نو په دغه وخت کې [[د زړه احيا]] کولو کړنه بايد سمدلاسه پيل شي او بيا دې د مسلکي طبي املې سره اړيکې ونيولای شي.  If an [[automated external defibrillator]] is available, this device may automatically administer [[defibrillation]] if this is indicated. Usually, if there is enough time, the person can be rushed to the hospital where he or she will be cared for by a cardiologist, a doctor who specializes in the heart and lungs.
+که چېرته د يو چا زړه درېږي، (د زړه د درزا نشتون)، نو په دغه وخت کې [[د زړه احيا]] کولو کړنه بايد سمدلاسه پيل شي او بيا دې د مسلکي طبي املې سره اړيکې ونيولای شي.  If an [[automated external defibrillator]] is available, this device may automatically administer [[defibrillation]] if this is indicated. Usually, if there is enough time, the person can be rushed to the hospital where he or she will be cared for by a cardiologist, a doctor who specializes in the heart and lungs.
 
 Electrical innervation of the heart in health is supplied by two closely intertwined mechanisms. The first mechanism is well demonstrated in electrical coil systole (interpreted by the electrocardiogram as QRS)as an individualized myocardial electrical tree initiated by the sinoatrial node. Secondary diastolic electrical control is posited to represent autonomic recoil control from the vagus nerve and cardiac branches and the thoracic ganglia.
 
