robot  Adding: [[bat-smg:Encėkluopedėjė]]

--- a/پوهنغونډ.mw
+++ b/پوهنغونډ.mw
@@ -166,6 +166,7 @@ CD-ROM and Internet-based encyclopedias also offer greater search abilities than
 [[arz:موسوعه]]
 [[az:Ensiklopediya]]
 [[bar:Enzyklopädie]]
+[[bat-smg:Encėkluopedėjė]]
 [[be:Энцыклапедыя]]
 [[be-x-old:Энцыкляпэдыя]]
 [[bg:Енциклопедия]]
