/* ځانګړو غړو ته اړونده بوغمه */

--- a/بوغمه.mw
+++ b/بوغمه.mw
@@ -27,11 +27,11 @@ In myxedema and a variety of other rarer conditions edema is due to an increased
 د بدن د ځينو ځانګړو غړو د التهاب په وخت کې بوغمه رامېنځ ته کېدلای شي، لکه د ستوني د التهاب، د پلو التهاب او يا د پانکراس التهاب دا ټول بوغمه رامېنځ ته کوي. د بدن ځينې نور غړي د ووبونو د خاص ميکانيزم له مخې بوغمه کېږي.
 په ځانګړو غړو کې د بوغمې بېلګې:
 :*[[مغزي بوغمه]] په ماغزو کې د سلولونو د خارجي مايع د راغونډېدلو په پايله کې رامېنځ ته کېږي. دا د زهرجن او غيرنورمال ميټابوليک دريځ او حالتونو لکه د سيسټېميک لوپس ناروغۍ په وخت کې هم راپېښېدلای شي. داسې حالت په ناروغ کې سربدالي او بې هوشي رامېنڅ ته کوي.
-:* د سږو بوغمه occurs when the pressure in blood vessels in the lung is raised because of obstruction to removal of blood via the pulmonary veins. This is usually due to failure of the left ventricle of the heart. It can also occur in altitude sickness or on inhalation of toxic chemicals. Pulmonary edema produces shortness of breath. [[Pleural effusion]]s may occur when fluid also accumulates in the [[pleural]] cavity.
+:* [[د سږو بوغمه]] هغه وخت پېښېږي کله چې د سږو د وينې په رګونو کې فشار جګېږي. د وينې په رګونو کې د فشار د لوړوالي سبب د وينې د بهېدو په بهير کې خنډ او بنديز دی. چې د سږو د وريدونو له لارې د خنډونو او بنديزونو د ليرې کولو لپاره فشار جګېږي. او بل سبب يې د زړه ا کيڼ بطن د ناسوبوالي له امله هم راپېښېږي. دا ډول بوغمه په لوړو سطحو کې او د کيميايي زهرجنو توکيو د تنفس کولو په سبب هم مېنځ ته راځي. د سږو د بوغمې د راپېښېدلو سره د ناروغ ساه لنډه لنډه کېږي. همدا راز په ناروغ کې د سږو په پوښل شوې پرده يا پليورا کې هم اوبلنه ماده راغونډېدلی شي.
 
-:*Edema may also be found in the cornea of the eye with glaucoma, severe conjunctivitis or keratitis or after  surgery. It may produce coloured haloes around bright lights.
+:*کله چې د سترګو قرنيې د ګلاوکوما په ناروغۍ اخته وي نو په هغو سترګو کې بوغمه هم راپېښېدلی شي، د کانجنکټيواټېس يا کيراټايټس او يا هم د سترګو د عمليات نه وروسته هم بوغمه رامېنځ ته کېږي. 
 
-Causes of edema which are generalized to the whole body can cause edema in multiple organs and peripherally. For example, severe heart failure can cause pulmonary edema, pleural effusions, ascites and [[peripheral edema]], the last of which effects can also derive from less serious causes.<ref>{{cite journal |author=Cho S, Atwood J |title=Peripheral oedema |journal=Am J Med |volume=113 |issue=7 |pages=580–6 |year=2002 |pmid=12459405 | doi = 10.1016/S0002-9343(02)01322-0}}</ref>
+د بوغمې سببونه د بدن يوه غړي پورې نه دي محدوده او په عام ډول ټول بدن بدن کې هم د ګڼو غړيو بوغمن کېدلو امکان هم شته. د ساري په توګه د زړه د حاد ناسوبوالي په نتيجه کې د سږو بوغمه، په پليورا کې د اوبلنې مادې راغونډېدنه، د نس ډډ بډ والی، او د بدن د خارجي اعضاؤ بوغمې ډېر راپېښېږي، چې په دغو ټولو کې د بدن د باندنيو غړو بوغمه، ناروغ ته د ډېره جدي روغتيايي ستونزه نه ده.<ref>{{cite journal |author=Cho S, Atwood J |title=Peripheral oedema |journal=Am J Med |volume=113 |issue=7 |pages=580–6 |year=2002 |pmid=12459405 | doi = 10.1016/S0002-9343(02)01322-0}}</ref>
 
 Common appearances of [[cutaneous]] edema are observed with [[mosquito]] bites, bee stings ([[wheal and flare]]), and skin contact with certain plants such as [[Poison Ivy]] or [[Western Poison Oak]],<ref> C.Michael Hogan (2008) [http://globaltwitcher.auderis.se/artspec_information.asp?thingid=82914 "Western poison-oak: Toxicodendron diversilobum"], GlobalTwitcher, ed. Nicklas Strömberg</ref> the latter of which are termed ''[[contact dermatitis]]''.
 
