--- a/بوغمه.mw
+++ b/بوغمه.mw
@@ -9,6 +9,7 @@
 #[[ووب]]ونو (انساجو) د اوبو ساتلو په ځانتياو کې بدلونونه هم بوغمه رامېنځ ته کوي.
 
 ==ميکانيزم==
+{{ژباړل}}
 Generation of interstitial fluid is regulated by the forces of the [[Starling equation]].<ref>Walter F., PhD. Boron. Medical Physiology: A Cellular And Molecular Approaoch, Elsevier/Saunders. ISBN 1-4160-2328-3.</ref> Hydrostatic pressure within blood vessels tends to cause water to filter out into the tissue. This leads to a difference in protein concentration between blood plasma and tissue. As a result the [[oncotic pressure]] of the higher level of protein in the plasma tends to suck water back into the blood vessels from the tissue. It is often not appreciated that the Starling equation does not indicate a balance between these forces. The hydrostatic force must always win, and there must always be leakage of fluid out of the vessel because otherwise there can be no oncotic gradient. Starling's equation states that the rate of leakage of fluid is determined by the difference between the two forces and also by the permeability of the vessel wall to water, which determines the rate of flow for a given force imbalance. Most water leakage occurs in capillaries or post capillary [[venule]]s, which have a [[semi-permeable membrane]] wall that allows water to pass more freely than protein. (The protein is said to be reflected and the efficiency of reflection is given by a reflection constant of up to 1.) If the gaps between the cells of the vessel wall open up then permeability to water is increased first, but as the gaps increase in size permeability to protein also increases with a fall in reflection coefficient.
 
 Changes in the variables in Starling's equation can contribute to the formation of edema either by an increase in hydrostatic pressure within the blood vessel, a decrease in the oncotic pressure within the blood vessel or an increase in vessel wall permeability. The latter has two effects. It allows water to flow more freely and it reduces the oncotic pressure difference by allowing protein to leave the vessel more easily. 
