/* فكر او نظر */

--- a/ويليم_مونټگمري_وات.mw
+++ b/ويليم_مونټگمري_وات.mw
@@ -30,7 +30,7 @@
 # «د سپېڅلي جګړې اسلامي مفاهيم،» د سپېڅلي  جګړې په كتاب كې، سمونه توماس پاتريک مورفي، 1976ز. ["Islamic Conceptions of the Holy War" in TheHoly War, edited by Thomas Patric Murphy , 1976]
 
 == فكر او نظر ==
-
+{{ژباړل}}
 
 د مونټګمري واټ ګروهه: اسلام هغه دين دى، چې په الهي وحې او یواځیني استازي (پیغمبر) ولاړ دی. او داسې په نظر راځي، چې قرآن هم نور ادیان لکه یهودیت او مسیحیت مني. هم په الهي وحی په توګه او هم استازي رالېږلو یې.(2) 
 
@@ -46,9 +46,7 @@
 وي معتقد است، اگر مسلمانان خواهان آنند که نقش فعالي در آينده جهان ايفا کنند - که البته آنها قادر به اين کار هستند - بايد ديدگاه جديدي نسبت به ديگر اديان اتخاذ نمايند. اين ديدگاه درخصوص ديگر اديان، بايد همچنين به ديگر جنبه هاي فرهنگ بشري که مرتبط با دين است نيز گسترش يابد. (6) 
 به نظر وات، به رغم قوت بنيادگرايي در چارچوبه احياي اسلامي، در ميان برخي از گروههاي مسلمان، علائمي از حرکت به سوي گفت و شنود با ساير اديان و بالاخص با مسيحيت ديده مي شود. بنيادگرايان نمي توانند بدون به خطر افکندن اعتقادشان به برتري و خاتميت اسلام، در اين تبادل نظر شرکت کنند و آنان مايل نيستند اين خطر را بپذيرند. در ميان «ليبرالها» غالبا براي تبادل نظر، سعه صدر مشاهده مي شود; ولي بسياري از آنان اساسا به تجديد تفکر در جنبه هاي خود - تصويري سنتي از اسلام - علاقه مند هستند (و فقط آن را صحيح مي دانند) و فرصت چنداني براي تامل در باب مناسبات مسلمانان و مسيحيان اختصاص نمي دهند. (7) 
 
-به اعتقاد وي، شايد برخي از مسيحيان احساس کنند، شرکت در گفت و گو به معناي سرپيچي از حکم مسيح است که گفته جميع خلايق را به انجيل موعظه کنيد. اي بسا بعضي از مسلمانان نيز چنين احساسي داشته باشند که مبناي درستي ندارد. در تبادل نظر، هر طرف، مذهب ديگري را تصديق مي کند و شرکت در گفت و گو، در واقع اعلام اين تصديق است. (8) 
- 
-
+به اعتقاد وي، شايد برخي از مسيحيان احساس کنند، شرکت در گفت و گو به معناي سرپيچي از حکم مسيح است که گفته جميع خلايق را به انجيل موعظه کنيد. اي بسا بعضي از مسلمانان نيز چنين احساسي داشته باشند که مبناي درستي ندارد. در تبادل نظر، هر طرف، مذهب ديگري را تصديق مي کند و شرکت در گفت و گو، در واقع اعلام اين تصديق است. (8)
 
 == دا هم وګورئ ==
 * [[شپنجلر]]
