robot  Adding: [[war:Myanmar]]

--- a/ميانمار.mw
+++ b/ميانمار.mw
@@ -364,6 +364,7 @@ Traditional [[Music of Myanmar|Burmese music]] is [[melody|melodious]] but witho
 [[vec:Birmania]]
 [[vi:Myanma]]
 [[vo:Mianmarän]]
+[[war:Myanmar]]
 [[wo:Miyanmaar]]
 [[wuu:缅甸]]
 [[zea:Myanmar]]
