/* چاپ شوي آثار */

--- a/رحمت_شاه_سائل.mw
+++ b/رحمت_شاه_سائل.mw
@@ -14,25 +14,30 @@
 == چاپ شوي آثار ==
 لومړنى شعر يي په ١٣ کلنى کې ووايه . تر هغه شل کاله وروسته يي لومړنى کتاب چاپ شو .ددې کتاب نوم وو : د وير په چم کې و ار د نغمو دى .
 
-تراوسه يي ٩ کتابونه چاپ شوى دى . ځينې کتابونه يې خورا وتلى او په زړه پورې دى لکه :درد چې د څړيکو څانگې وسپړلې ، دلمبوپه سيوري کې ، دښايستونو د سپرلي بادونه اونور .
+تراوسه يي ٩ کتابونه چاپ شوى دى . ځينې کتابونه يې خورا وتلى او په زړه پورې دى لکه:
 
-داخيري سندرې په نوم يې د کيسو يوکتاب هم له چاپه راوتلى دى . څو ناچاپه نظمى او نثري اثار هم لري .
-#ريبار ـــ د شعرونو لومړۍ ټولګه.
-# سره بڅري ـــ د انقلابي نظمونو او شعرونو ټولګه.
-#د وير په چم کې وار د نغمو دی ـــ د شعرونو  ټولګه.
-# د لمبو سيوری ـــ د شعرونو ټولګه.
-#درد چه د څړیکو څانګې اوسپړلې  ـــ د شعرونو ټولګه.
-#آخري سندره  ـــ د لنډو کیسو ټولګه.
-#د وینو رنګ په لمبو څنګه ښکاري ـــ د شعرونو ټولګه.
-#حالات چې اور وروي ـــ د شعرونو ټولګه.
-#د ښایستونو د سپرلی بادونه ـــ د شعرونو ټولګه.
- 
-پاتې دې نه وي چې د "سائل" صېب د لمبو سيوری ،درد چې د څړیکو څانګې اوسپړلې،آخري سندره، د وینو رنګ په لمبو څنګه ښکاري او حالات چې اور وروي زموږ په کتابتون کې شته خو د وخت له کمې څخه نه شو کولې چې د سائل صېب ټول شعرونه ان لاین کړو.
+#د وير په چم کې وار د نغمو دی - شعري ټولګه
+#د لمبو په سيوري - شعري ټولګه
+#د ښايستونو د سپرلي بادونه - شعري ټولګه
+#درد چې د څړيکو څانګې وسپړلې - شعري ټولګه
+#د وينو رنګ په لمبو څنګه ښکاري؟ - شعري ټولګه
+#تا له تصوير په ګلاب جوړ کړم که نه - شعري ټولګه
+#د چينارونو نه لمبې ووتې - شعري ټولګه
+#حالات چې اور اوروي - شعري ټولګه
+#ته به په خپل تصوير کې څوک ځايوي - شعري ټولګه
+#زه د خزان د پاڼې پاڼې سره ورژېدم - شعري ټولګه
+#آخري سندره - افسانې
+
+== ناچاپه آثار ==
+#ريبار ـ د شعرونو لومړۍ ټولګه.
+# سره بڅري ـ د انقلابي نظمونو او شعرونو ټولګه.
+#د ثقافت تاريخي بنيادونه ـ نثر
+#ټپه که ستاينه - نثر
+#هر تصوير زما تصوير - مقالې
+#خبرلوڅ تصويرونه - مقالې
+#په في الميزان کې د هېواد معنوي اړخونه - نثر 
 
 
-
-
-وروستى چاپ شوى کتاب يي دى : ته به پخپل تصويرکې څوک ځايوې. ښاغلى سايل ټول عمر خياط (درزي ) وو خواوس هوډ لري چې د پښتون په رساله کې کار وکړي . هلته به ليکنې کوي.
 
 رحمت شاه سايل لس ماشومان لري . او لا پخپل کلي کې اوسي.
 [[وېشنيزه: پښتانه شاعران]]
