--- a/رحمت_شاه_سائل.mw
+++ b/رحمت_شاه_سائل.mw
@@ -10,6 +10,7 @@
 له ماشومتوبه يي د ورځپاڼوله لوستلوسره مينه پيداشوه اوتل به يي لوستلې . تر دې چې ليکل اولوستل يي پوره پکې زده کړل او بيا خو يي وروسته حتى مقالې ورته ليکلې .
 
 == دندې ==
+رحمت شاه سايل د خپل د عمر لويه برخه، په خپل کلي کې د درزي په توګه تېره کړې. دوه کاله کېږي چې د باچاخان په مرکز کې د پښتون مياشتينۍ پازوال دی او همدغې خپرونې ته ليکنې چمتو کوي.
 
 == چاپ شوي آثار ==
 لومړنى شعر يي په ١٣ کلنى کې ووايه . تر هغه شل کاله وروسته يي لومړنى کتاب چاپ شو .ددې کتاب نوم وو : د وير په چم کې و ار د نغمو دى .
