/* چاپ شوي آثار */

--- a/رحمت_شاه_سائل.mw
+++ b/رحمت_شاه_سائل.mw
@@ -12,10 +12,11 @@
 == دندې ==
 رحمت شاه سايل د خپل د عمر لويه برخه، په خپل کلي کې د درزي په توګه تېره کړې. دوه کاله کېږي چې د باچاخان په مرکز کې د پښتون مياشتينۍ پازوال دی او همدغې خپرونې ته ليکنې چمتو کوي.
 
-== چاپ شوي آثار ==
-لومړنى شعر يي په ١٣ کلنى کې ووايه . تر هغه شل کاله وروسته يي لومړنى کتاب چاپ شو .ددې کتاب نوم وو : د وير په چم کې و ار د نغمو دى .
+== ادبي ژوند ==
+رحمت شاه سايل له ماشومتوب نه په شعر وييلو پيل کړی. هغه خپل لومړنى شعر په ١٣ کلنۍ کې ووايه او بيا يې شل کاله وروسته خپل لومړنى کتاب چاپ  کړ. د نوموړي ګڼ شمېر شعرونو نه سندرې جوړې شوي چې د ډېرو سندرغاړو لخوا وييل شوي.
 
-تراوسه يي ٩ کتابونه چاپ شوى دى . ځينې کتابونه يې خورا وتلى او په زړه پورې دى لکه:
+=== چاپ شوي آثار ===
+د رحمت شاه سايل تر ډېر کتابونه خپاره شوي چې د هغه د ټولو خپرو شوو کتابونو لړليک په لاندې توګه دی:
 
 #د وير په چم کې وار د نغمو دی - شعري ټولګه
 #د لمبو په سيوري - شعري ټولګه
@@ -28,6 +29,9 @@
 #ته به په خپل تصوير کې څوک ځايوي - شعري ټولګه
 #زه د خزان د پاڼې پاڼې سره ورژېدم - شعري ټولګه
 #آخري سندره - افسانې
+
+=== ناچاپه آثار ===
+د رحمت شاه سايل ځينې نور کتابونه لا تر اوسه پورې نه دي چاپ شوي چې هغه په دې ډول دي:
 
 == ناچاپه آثار ==
 #ريبار ـ د شعرونو لومړۍ ټولګه.
