*Empty MediaWiki Message*

--- a/رحمت_شاه_سائل.mw
+++ b/رحمت_شاه_سائل.mw
@@ -1,13 +1,12 @@
 <font face="Tahoma">
 [[Image:Rahmahshahsahil1.jpg|thumb|289px|رحمت شاه سائل]]
-'''رحمت شاه "سائل"'''  د امين ګل  زوی دی چې په ۱۳۲۸ هـ ل  کال د پېښور د ملاکنډ ايجنسۍ د درګی د سيمې د ورتير په نوم کلي کې زېږېدلی دی. د پښتو ژبې يو بيدارمغز او د حساس ذهن شاعر دی.
+'''رحمت شاه "سائل"'''  په برې پښتونخوا کې يو پښتون شاعر دی چې د شعرونو ګڼ شمېر ټولګې يې خپرې شوي. همداراز د هغه شعرونه د ګڼ شمېر سندرغاړو لخوا وييل شوي هم دي. نوموړی د عوامي نشنل پارټۍ غړيتوب لري او دم مهال په پېښور کې د باچاخان مرکز لخوا د مياشتينۍ خپرونې پښتون مجلې پازوال دی.
 
-د رحمت شاه "سائل" نوم د ډېر شهرت لرونکی دی. د خپل ادبي فعاليت په دوران کې يې دغه لاندې علمي او ادبي کارونه هم کړي دي چې د پښتو پاڼکه به پرې د تل لپاره درنه وي.
-
+== مخينه ==
+امين ګل  زوی دی چې په ۱۳۲۸ هـ ل  کال د پېښور د ملاکنډ ايجنسۍ د درګی د سيمې د ورتير په نوم کلي کې زېږېدلی دی. رحمت شاه سايل لس ماشومان لري . او لا پخپل کلي کې اوسي.
 
 == زده کړې ==
-زده کړه يې تر څلورم ټولګي پورې کړې، خو په ليک لوست ډېر ښه پوهيږي.
-له ماشومتوبه يي د ورځپاڼوله لوستلوسره مينه پيداشوه اوتل به يي لوستلې . تر دې چې ليکل اولوستل يي پوره پکې زده کړل او بيا خو يي وروسته حتى مقالې ورته ليکلې .
+زده کړه يې تر څلورم ټولګي پورې کړې، خو په ليک لوست ډېر ښه پوهيږي. له ماشومتوبه يي د ورځپاڼو له لوستلو سره مينه پيدا شوه او تل به يي لوستلې. تر دې چې ليکل او لوستل يي پوره پکې زده کړل او بيا خو يي وروسته آن مقالې هم ورته ليکلې.
 
 == دندې ==
 رحمت شاه سايل د خپل د عمر لويه برخه، په خپل کلي کې د درزي په توګه تېره کړې. دوه کاله کېږي چې د باچاخان په مرکز کې د پښتون مياشتينۍ پازوال دی او همدغې خپرونې ته ليکنې چمتو کوي.
@@ -43,6 +42,6 @@
 
 
 
-رحمت شاه سايل لس ماشومان لري . او لا پخپل کلي کې اوسي.
+
 [[وېشنيزه: پښتانه شاعران]]
 [[وېشنيزه: پښتانه ليکوالان]]
