--- a/رحمت_شاه_سائل.mw
+++ b/رحمت_شاه_سائل.mw
@@ -41,7 +41,7 @@
 #په في الميزان کې د هېواد معنوي اړخونه - نثر
 
 == باندنۍ تړنې ==
-
+*[http://www.pakhtoonmagazine.com/ پښتون] - په پېښور کې د باچاخان د مرکز نه خپرېدونکې مياشتينۍ مجله
 
 
 [[وېشنيزه: پښتانه شاعران]]
