/* د شعر يوه بېلګه */

--- a/رحمت_شاه_سائل.mw
+++ b/رحمت_شاه_سائل.mw
@@ -41,7 +41,8 @@
 #په في الميزان کې د هېواد معنوي اړخونه - نثر
 
 == د شعر يوه بېلګه ==
-{{شعر}}
+<center>
+غزل{{شعر}}
 {{ب|چې په خندا ورته د خوږ زړه پرهرونه نشي|چېرې دې هم ستا د ښايست غوټۍ ګلونه نشي}}
 {{ب|راشه مظلوم زړه مې په يو نظر يوه لمبه کړه|چې په ظالم زړګي دې پاتې ارمانونه  نشي}}
 {{ب|بيا د جنون مستي ځواني غواړي د مستې مينې|بيا چېرته خيال د تورو زلفو ځنځيرونه نشي}}
@@ -51,6 +52,8 @@
 {{ب|خاموشې شونډې مې لوستې بيدارېدې ويل يې|اورونه مه چېړه لوګي دې پرې فکرونه نشي}}
 {{ب|ويده دنيا ای د (سائل ) قلمه مه لړزوه|د فريادي اوښکو مات ستوري تندرونه نشي}}
 {{د شعر پای}}
+<center/>
+
 == باندنۍ تړنې ==
 *[http://www.pakhtoonmagazine.com/ پښتون] - په پېښور کې د باچاخان د مرکز نه خپرېدونکې مياشتينۍ مجله
 
