/* د شعر يوه بېلګه */

--- a/رحمت_شاه_سائل.mw
+++ b/رحمت_شاه_سائل.mw
@@ -52,7 +52,7 @@
 {{ب|خاموشې شونډې مې لوستې بيدارېدې ويل يې|اورونه مه چېړه لوګي دې پرې فکرونه نشي}}
 {{ب|ويده دنيا ای د (سائل ) قلمه مه لړزوه|د فريادي اوښکو مات ستوري تندرونه نشي}}
 {{د شعر پای}}
-<center/>
+</center>
 
 == باندنۍ تړنې ==
 *[http://www.pakhtoonmagazine.com/ پښتون] - په پېښور کې د باچاخان د مرکز نه خپرېدونکې مياشتينۍ مجله
