--- a/رحمت_شاه_سائل.mw
+++ b/رحمت_شاه_سائل.mw
@@ -57,6 +57,7 @@
 == باندنۍ تړنې ==
 *[http://www.pakhtoonmagazine.com/ پښتون] - په پېښور کې د باچاخان د مرکز نه خپرېدونکې مياشتينۍ مجله
 *[http://www.hewad.com/poetry/saiel/ د رحمت شاه سايل شعرونه] - په هېواد وېبپاڼه کې د رحمت شاه سايل ځينې شعرونه
+*[http://www.hewad.com/poetry/saiel/zhwandlik.htm د رحمت شاه سايل ژوندليک] - په هېواد وېبپاڼه کې د رحمت شاه سايل ژوندليک
 
 [[وېشنيزه: پښتانه شاعران]]
 [[وېشنيزه: پښتانه ليکوالان]]
