--- a/ويليم_مونټگمري_وات.mw
+++ b/ويليم_مونټگمري_وات.mw
@@ -29,15 +29,14 @@
 # «نوم يې محمد دى،» مسلمانه نړۍ، 63 شمېره، 1953ز. Muslim World 
 # «د سپېڅلي جګړې اسلامي مفاهيم،» د سپېڅلي  جګړې په كتاب كې، سمونه توماس پاتريک مورفي، 1976ز. ["Islamic Conceptions of the Holy War" in TheHoly War, edited by Thomas Patric Murphy , 1976]
 
-== فكر او نظر ==
+== اندو اند ==
 {{ژباړل}}
 
 د مونټګمري واټ ګروهه: اسلام هغه دين دى، چې په الهي وحې او یواځیني استازي (پیغمبر) ولاړ دی. او داسې په نظر راځي، چې قرآن هم نور ادیان لکه یهودیت او مسیحیت مني. هم په الهي وحی په توګه او هم استازي رالېږلو یې.(2) 
 
 د واټ په ګروهه، که څه هم قرآن کریم د یهودیت او مسیحیت څخه غږېږي، او استازي یې الهي ګڼي، په سنتي مسلمانانو کې دا ګروهه شته چې ددوي سپېڅلي کتابونه (توران او انجیل) تحریف شوي دي.
-
-و اين عقيده بدون شک به اين نقطه نظر کمک کرده است که غرب از نظر اخلاقي فاسد مي باشد و اينکه تنها اسلام دين حقيقي است و هيچ دين و مذهبي، خارج از اسلام، راستين نمي باشد. (3) 
-مونتگمري وات معتقد است بازگشت به اسلام از ويژگيهاي مهم دو دهه اخير است. اين احيا داراي خصلت بنيادگرايي و يا سنت گرايي است. بنيادگرايي اسلامي با سنت گرايي مسيحيت که اساسا پديده اي پروتستاني است، شباهت ندارد; «انتگريسم » Integrism (نوعي اصطلاح خاص کاتوليکها است که هرگونه تحول و تکامل را رد مي کند، نيز مي تواند نظريه کساني به شمار آيد که دولت را به اطاعت از مذهب فرا مي خوانند.) يا تماميت طلبي نزديکترين اصطلاح زبان فرانسه و کاتوليک رومي به احياي اسلامي است، اما مفهوم آنها باز هم اندکي با هم متفاوت است. 
+او بې له شکه دا ګروهه پدې کار کې مرسته کوي، چې لودیځ له اخلاقي اړخه فاسد دی، او دا چې اسلام یواځینې رښتونی دین دی، او لدې پرته هېڅ دین او لار رښتونې نده.(3) 
+مونټګمري واټ پدې ګروهه دی، چې اسلام ته راګرځېدل د تېرو دوه لسیزو له ځانګړتیاوو څخه دي. بنيادگرايي اسلامي با سنت گرايي مسيحيت که اساسا پديده اي پروتستاني است، شباهت ندارد; «انتگريسم » Integrism (نوعي اصطلاح خاص کاتوليکها است که هرگونه تحول و تکامل را رد مي کند، نيز مي تواند نظريه کساني به شمار آيد که دولت را به اطاعت از مذهب فرا مي خوانند.) يا تماميت طلبي نزديکترين اصطلاح زبان فرانسه و کاتوليک رومي به احياي اسلامي است، اما مفهوم آنها باز هم اندکي با هم متفاوت است. 
 
 به نظر مي رسد يکي از عوامل مهم و نهفته در شالوده احياي اسلامي، رواج اين احساس در ميان مسلمانان عادي بوده که فکر مي کردند هويت اسلاميشان به مخاطره افتاده [است]. جهت يا بعد مذهبي هم در اين احيا سهمي ايفا کرده [است]. احتمالا بسياري از مسلمانان عادي از تفصيلات انتقاد ديني مسيحيان بر اسلام آگاهي نداشتند، اما بسياري از آنان مي دانستند که مسيحيان غربي اکثر عقايد اسلامي را رد مي کنند و اسلام را يک دين راستين نمي شمارند و مي پندارند از مسيحيت عقبتر است. گذشته از انتقاد مسيحيان نسبت به اسلام، مي دانيم بعد از «عصر روشنگري »، رگه هاي ضد مذهبي در تفکر اروپايي پيدا شد و اسلام را قرون وسطايي، کهنه و فاقد ارزش تلقي کرد. (4) 
 
