--- a/ويليم_مونټگمري_وات.mw
+++ b/ويليم_مونټگمري_وات.mw
@@ -42,10 +42,9 @@
 
 به اعتقاد وات، يکي از جنبه هاي احياي اسلامي، طرد رسوم معين و پذيرفته شده از غرب است - نه ربا، نه مشروب و نه لباس غربي براي زنان. به هر حال، نبايد چنين مواردي را اساسا ضد غربي يا ضد مسيحي تلقي کرد، بلکه بايد آن را هواخواهي از مسلمانان دانست. مسلمين در احياي اسلامي، احتمالا از ضمير ناخودآگاه، اصرار دارند با آنان، از نظر انساني و مذهبي، چنان رفتار شود که با غربيان و مسيحيان رفتار مي شود. وصول به اين خواسته، دشوار است; زيرا مسيحيان فکر مي کنند مذهبشان از مذاهب ديگر برتر است. (البته مسلمانان نيز به برتري مذهب خود اعتقاد دارند.) (5) 
 
-وي معتقد است، اگر مسلمانان خواهان آنند که نقش فعالي در آينده جهان ايفا کنند - که البته آنها قادر به اين کار هستند - بايد ديدگاه جديدي نسبت به ديگر اديان اتخاذ نمايند. اين ديدگاه درخصوص ديگر اديان، بايد همچنين به ديگر جنبه هاي فرهنگ بشري که مرتبط با دين است نيز گسترش يابد. (6) 
-به نظر وات، به رغم قوت بنيادگرايي در چارچوبه احياي اسلامي، در ميان برخي از گروههاي مسلمان، علائمي از حرکت به سوي گفت و شنود با ساير اديان و بالاخص با مسيحيت ديده مي شود. بنيادگرايان نمي توانند بدون به خطر افکندن اعتقادشان به برتري و خاتميت اسلام، در اين تبادل نظر شرکت کنند و آنان مايل نيستند اين خطر را بپذيرند. در ميان «ليبرالها» غالبا براي تبادل نظر، سعه صدر مشاهده مي شود; ولي بسياري از آنان اساسا به تجديد تفکر در جنبه هاي خود - تصويري سنتي از اسلام - علاقه مند هستند (و فقط آن را صحيح مي دانند) و فرصت چنداني براي تامل در باب مناسبات مسلمانان و مسيحيان اختصاص نمي دهند. (7) 
+د منټګمري په خیال که چېرې مسلمانان وغواړي چې د نړۍ په راتلونکې کې کارنده ونډه ولري، چې ددې کار وړتیا هم لري، نو باید د نورو ادیانو په اړه یو نویلرلید خپل کړي. د نورو ادیانو په اړه د ځانګړي نظر باید نورو فرهنګي اړخونو ته چې دین پورې تړلي دي هم وغځول شي.(6) 
 
-به اعتقاد وي، شايد برخي از مسيحيان احساس کنند، شرکت در گفت و گو به معناي سرپيچي از حکم مسيح است که گفته جميع خلايق را به انجيل موعظه کنيد. اي بسا بعضي از مسلمانان نيز چنين احساسي داشته باشند که مبناي درستي ندارد. در تبادل نظر، هر طرف، مذهب ديگري را تصديق مي کند و شرکت در گفت و گو، در واقع اعلام اين تصديق است. (8)
+دده په ګروه کېدای شي ځینې عیسویان داسې و انګېري، چې په خبرو اترو کې ګډون به د مسېح له لارښوونو څخه سرغړونه ده، چې ویلی یې دي ټول مخلوقاتو ته انجیل ورسوﺉ، او بلنه ورته وکړﺉ، چې ځینې مسلمانان هم همداسې احساس ولري چې دا کار سم بنسټ نلري. د افکارو په تبادله کې هر اړخ، بل دین او مذهب تصدیقوي، او په خبرو اترو کې ګډون ددې تصدیق منل دي.(8)
 
 == دا هم وګورئ ==
 * [[شپنجلر]]
