--- a/ويليم_مونټگمري_وات.mw
+++ b/ويليم_مونټگمري_وات.mw
@@ -36,11 +36,9 @@
 
 د واټ په ګروهه، که څه هم قرآن کریم د یهودیت او مسیحیت څخه غږېږي، او استازي یې الهي ګڼي، په سنتي مسلمانانو کې دا ګروهه شته چې ددوي سپېڅلي کتابونه (توران او انجیل) تحریف شوي دي.
 او بې له شکه دا ګروهه پدې کار کې مرسته کوي، چې لودیځ له اخلاقي اړخه فاسد دی، او دا چې اسلام یواځینې رښتونی دین دی، او لدې پرته هېڅ دین او لار رښتونې نده.(3) 
-مونټګمري واټ پدې ګروهه دی، چې اسلام ته راګرځېدل د تېرو دوه لسیزو له ځانګړتیاوو څخه دي. بنيادگرايي اسلامي با سنت گرايي مسيحيت که اساسا پديده اي پروتستاني است، شباهت ندارد; «انتگريسم » Integrism (نوعي اصطلاح خاص کاتوليکها است که هرگونه تحول و تکامل را رد مي کند، نيز مي تواند نظريه کساني به شمار آيد که دولت را به اطاعت از مذهب فرا مي خوانند.) يا تماميت طلبي نزديکترين اصطلاح زبان فرانسه و کاتوليک رومي به احياي اسلامي است، اما مفهوم آنها باز هم اندکي با هم متفاوت است. 
-
-به نظر مي رسد يکي از عوامل مهم و نهفته در شالوده احياي اسلامي، رواج اين احساس در ميان مسلمانان عادي بوده که فکر مي کردند هويت اسلاميشان به مخاطره افتاده [است]. جهت يا بعد مذهبي هم در اين احيا سهمي ايفا کرده [است]. احتمالا بسياري از مسلمانان عادي از تفصيلات انتقاد ديني مسيحيان بر اسلام آگاهي نداشتند، اما بسياري از آنان مي دانستند که مسيحيان غربي اکثر عقايد اسلامي را رد مي کنند و اسلام را يک دين راستين نمي شمارند و مي پندارند از مسيحيت عقبتر است. گذشته از انتقاد مسيحيان نسبت به اسلام، مي دانيم بعد از «عصر روشنگري »، رگه هاي ضد مذهبي در تفکر اروپايي پيدا شد و اسلام را قرون وسطايي، کهنه و فاقد ارزش تلقي کرد. (4) 
-
-به اعتقاد وات، يکي از جنبه هاي احياي اسلامي، طرد رسوم معين و پذيرفته شده از غرب است - نه ربا، نه مشروب و نه لباس غربي براي زنان. به هر حال، نبايد چنين مواردي را اساسا ضد غربي يا ضد مسيحي تلقي کرد، بلکه بايد آن را هواخواهي از مسلمانان دانست. مسلمين در احياي اسلامي، احتمالا از ضمير ناخودآگاه، اصرار دارند با آنان، از نظر انساني و مذهبي، چنان رفتار شود که با غربيان و مسيحيان رفتار مي شود. وصول به اين خواسته، دشوار است; زيرا مسيحيان فکر مي کنند مذهبشان از مذاهب ديگر برتر است. (البته مسلمانان نيز به برتري مذهب خود اعتقاد دارند.) (5) 
+مونټګمري واټ پدې ګروهه دی، چې اسلام ته راګرځېدل د تېرو دوه لسیزو له ځانګړتیاوو څخه دي. 
+دده په ګروهه، د اسلامي ویښتابه یو بنسټیز اړخ دا دی، چې د لودیځې نړۍ ټاکل شوې دود و دوستور یې رټلې. نه ګټه خوړل، نه شراب څښل، او نه هم لودیځوال لباس د ښځمنو لپاره. په هر ډول، دا ډول کړنې باید نه لودیځ ضد وګڼو او نه هم د عیسویت ضد، بلکه دا باید د مسلمانانو غوښتنه وګڼل شي. 
+مسلمانان په اسلامي ویښتابه کې داسې غوښتنه کوي، چې له دوی سره دې هم په انساني او مذهبي نقطه نظره د لویديځوالو او عیسویانو په څېر چلند وشي. دې غوښتنې ته رسېدل یو څه ستونزمن دي، ځکه چې عیسویان داسې انګرېري، چې ددوي دین له نورو ادیانو غوره دی. (لکه څرنګه چې مسلمانان هم همدا د غوره والي نظر لري.)(5) 
 
 د منټګمري په خیال که چېرې مسلمانان وغواړي چې د نړۍ په راتلونکې کې کارنده ونډه ولري، چې ددې کار وړتیا هم لري، نو باید د نورو ادیانو په اړه یو نویلرلید خپل کړي. د نورو ادیانو په اړه د ځانګړي نظر باید نورو فرهنګي اړخونو ته چې دین پورې تړلي دي هم وغځول شي.(6) 
 
