--- a/ويليم_مونټگمري_وات.mw
+++ b/ويليم_مونټگمري_وات.mw
@@ -57,3 +57,6 @@
 # William Montgomary Watt, op. cit, p. 122. 
 # ويليام مونتگمري وات، مخكينۍ سرچينه، ص 210. 
 # هماغه سرچينه، ص 243.
+
+[[ویشنیزه:ختیځپوهان]]
+[[ویشنیزه:اسلامپېژندونکي]]
