--- a/ويليم_مونټگمري_وات.mw
+++ b/ويليم_مونټگمري_وات.mw
@@ -58,5 +58,5 @@
 # ويليام مونتگمري وات، مخكينۍ سرچينه، ص 210. 
 # هماغه سرچينه، ص 243.
 
-[[ویشنیزه:ختیځپوهان]]
-[[ویشنیزه:اسلامپېژندونکي]]
+[[وېشنیزه:ختیځپوهان]]
+[[وېشنیزه:اسلامپېژندونکي]]
