--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -182,6 +182,13 @@
 ==بهرنې تړن==
 ** [http://tanweer2.blogfa.com/ د اسلامي حزب په اړه یو مالوماتي بلاګ]
 
+==بهرنې تړن==
+* [http://tanweer.blogfa.com د تنویر په نامه بلاګ]
+
+* [http://.tanweer.blogfa.com صفحه دوستداران وطن]
+
+* [http://ketab-khana.blogfa.com د تنویر کتابټون] د ورو حکمتیار ډیری کتابونه لدې کتابتون څخه ترلاسه کولای شﺉ.
+
 == '''اخځليكونه''' ==
 **[[اسلامي غورځنګ]]، لیکوال: انجنییر ګلبدالدین حکمتیار
 
