*Empty MediaWiki Message*

--- a/اقبال_او_گوېټه.mw
+++ b/اقبال_او_گوېټه.mw
@@ -1,1 +1,2 @@
 '''علامه اقبال''' چې د ختیځ او لودیځ له کومو منل شویو څېرو څخه اغیزمن شوې، لدې ډلې څخه د ګوېټه یو روښانه څېره ده. اقبال چې له ګوېټه سره د کوم تړاو ښکارندوي کړې د هغې په رڼا کې ویلای شو چې علامه په ختیځ کې له مولانا رومي او په لودیځ کې له ګوېټه څخه اغیزمن ښکاري.
+ د ګوېټه او اقبال د ذهني اړیکو بیان او د دواړو پرتلیزه څېړنه ددې کلینې سکالو دی.
