*Empty MediaWiki Message*

--- a/اقبال_او_گوېټه.mw
+++ b/اقبال_او_گوېټه.mw
@@ -1,2 +1,5 @@
 '''علامه اقبال''' چې د ختیځ او لودیځ له کومو منل شویو څېرو څخه اغیزمن شوې، لدې ډلې څخه د ګوېټه یو روښانه څېره ده. اقبال چې له ګوېټه سره د کوم تړاو ښکارندوي کړې د هغې په رڼا کې ویلای شو چې علامه په ختیځ کې له مولانا رومي او په لودیځ کې له ګوېټه څخه اغیزمن ښکاري.
- د ګوېټه او اقبال د ذهني اړیکو بیان او د دواړو پرتلیزه څېړنه ددې کلینې سکالو دی.
+د ګوېټه او اقبال د ذهني اړیکو بیان او د دواړو پرتلیزه څېړنه ددې کلینې سکالو دی.
+
+د المان (جرمني) ستر پوه-اندی، شاعر او فیلسوف د فرانکفورټ په مشهور ښار کې زېږېدلې دی. دې د ۸۳ کالو د اوږده عمر ښاوند وو. د علامه اقبال له پیداېښت څخه ۴۵ کاله وړاندې په ۱۸۳۲ز کال ومړ. 
+ګوېټه د قانون له زده کړې وروسته نوکري پیل کړه، او پدې د خپل کار په دوران کې د وایي مار علم دوسته ډېوک کارل ارګست سره یې لیده کاته وشوه، دډېوک کارل ګوېټ خپل کور ته وباله، چې هغه هم دا بلنه ومنله. ګوېټّ تر مرګه هورې (په وای مار) کې پاتې شو او هملته خاور ته وسپارل شو.
