*Empty MediaWiki Message*

--- a/گوېټه.mw
+++ b/گوېټه.mw
@@ -1,3 +1,4 @@
+[[دوتنه:Goethe (Stieler 1828).jpg|left|thumb|300px| ګوېټه]]
 {{Infobox Writer <!-- for more information see [[:Template:Infobox Writer/doc]] -->
 |name = Johann Wolfgang von Goethe
 |image = Goethe (Stieler 1828).jpg
