--- a/گوېټه.mw
+++ b/گوېټه.mw
@@ -92,7 +92,7 @@ In 1832, after a life of vast productivity, Goethe died in [[Weimar, Germany|Wei
 
 The first production of [[Richard Wagner]]'s opera ''[[Lohengrin]]'' took place in [[Weimar]] in 1850.  The conductor was [[Franz Liszt]], who chose the date 28 August in honour of Goethe, who was born on 28 August 1749.<ref>Grove's Dictionary of Music and Musicians, 5th ed., 1954</ref>
 
-== Works ==
+== کار==
 [[Image:-1- Die Leiden des jungen Werthers. Erstdruck .jpg|thumb|160px|upright|First edition of ''Werther'']]
 [[Image:Printing4 Walk of Ideas Berlin.JPG|thumb|160px|upright|"Modern Book Printing" from the [[Walk of Ideas]] in Berlin, Germany - built in 2006 to commemorate [[Johannes Gutenberg]]'s invention, c. 1445, of movable printing type]]
 {{main|List of works by Johann Wolfgang Goethe}}
