--- a/گوېټه.mw
+++ b/گوېټه.mw
@@ -26,7 +26,10 @@ Goethe is the originator of the concept of ''Weltliteratur'' ("[[world literatur
 
 Goethe's influence spread across Europe, and for the next century his works were a major source of inspiration in [[European classical music|music]], [[drama]], [[poetry]] and [[philosophy]]. Goethe is considered by many to be the most important writer in the German language and one of the most important thinkers in [[Western culture]] as well. Early in his career, however, he wondered whether painting might not be his true vocation; late in his life, he expressed the expectation that he would ultimately be remembered above all for his work in [[Theory of Colours|colour]].
 
-== Early life ==
+== ژوند ==
+د ګوېټه پلار، یوهان کسپر ګوېټه[[۱۷۱۰]]-[[۱۷۸۲]] له خپلې کورنۍ سره د فرانکفورټ په ښکار کې یو ستر کور کې اوسېده، چې په هغه پیر کې د روم د امپراتورۍ یوه برخه وه. د ګوېټه مو هم کترینا الیزابت ګوېټه د فرانکفورټ له نامتو کورنیو څخه وه.
+یوهان ولفګنګ د خپل پلار او ځنګړې ښوونکي په څنګ کې ډېر  زیات مالومات ترلاسه کړل، لاتیني، یوناني، فرانسوي، انګرېزي او عبري ژبې یې زده کړې.
+دې د [[۱۷۶۵]]-[[۱۷۶۸]] ترمنځ د [[لایپزیې]] ښار کې په د حقوقو په زده کړه بوخت شو، او هوری یې د [[کریسټین فورشتګوت ګلرټ]] له شعرونو سره مینه پیدا شوه. له ۱۷۶۸ز کال څخه وروسته خپل پلرني ښار ته راوګرځېد او یو څه موده په [[دارمشتات]] کې وو.
 [[Image:Goethehaus-ffm011.jpg|thumb|upright|right|Goethe's birthplace in Frankfurt, Germany (Grosser Hirschgraben)]]
 Goethe's father, Johann Caspar Goethe ([[Frankfurt am Main]], [[Hessen]], 29 July 1710{{ndash}} Frankfurt, 25 May 1782), lived with his family in a large house in Frankfurt, then an [[Imperial Free City]] of the [[Holy Roman Empire]]. <!--Though he had studied law in Leipzig and had been appointed Imperial Councillor, as a wealthy member of the [[bourgeoisie]], he spent most of his time collecting stuffed animals and paintings.--> Goethe's mother, Catharina Elisabeth Textor (Frankfurt, 19 February 1731{{ndash}} Frankfurt, 15 September 1808), the daughter of the Mayor of Frankfurt Johann Wolfgang Textor (Frankfurt, 11 December 1693{{ndash}} Frankfurt, 6 February 1771) and wife (married at [[Wetzlar]], 2 February 1726) Anna Margaretha Lindheimer (Wetzlar, 23 July 1711{{ndash}} Frankfurt, 18 April 1783, a descendant of [[Lucas Cranach the Elder]] and Henry III, Landgrave of Hesse-Marburg), married 38-year-old Johann Caspar when she was only 17 at Frankfurt on 20 August 1748. All their children, except for Goethe and his sister, Cornelia Friederike Christiana, who was born in 1750, died at an early age.
 
